--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* body {
+body {
     font-family: 'Arial', sans-serif;
     background-color: #121212;
     color: #f5f5f5;
@@ -65,4 +65,4 @@ a {
 
 a:hover {
     color: #ffd700;
-} */
+}
