--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ img {
     border: 2px solid #fff;
     border-radius: 10px;
     margin-bottom: 30px;
-    width: 35%;
+    width: 30vh;
 }
 
 ul {
