--- a/style.css
+++ b/style.css
@@ -13,7 +13,9 @@ body {
 }
 
 h1 {
-    font-size: 3em;
+    font-family: "Berkshire Swash", serif;
+    font-weight: 400;
+    font-style: normal;
     margin-bottom: 20px;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
 }
@@ -44,7 +46,7 @@ li {
 }
 
 li::before {
-    content: '\2192'; 
+    content: '\2192';
     position: absolute;
     left: 0;
     font-size: 1.5em;
